Removed authentication form requestToJava because no matter what I did it would try to authenticate login requests so i moved it to be called in all applicable handlers.